# error-handling-data-project

./: .flake8  .gitignore  Makefile  README.md  evaluate_performance.sh  main.py  pipeline.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agents/: README.md  __init__.py  agent_runner.py  tools.py
analysis/: Polars vs pandas.ipynb
generation-data/: data.json  generate.py  generate_large.py  generate_large.sh
generation-data/small/: data.csv  data.json  data.parquet  data_plain.parquet
ingestion/: exceptions.py  reader.py  transformer.py  validator.py
outputs/: result.parquet
polarspipe/: __init__.py  cli.py  main.py  pipeline.py
polarspipe/agent/: README_AGENT.md  __init__.py  graph.py  prompts.py  tools.py  tracing.py
polarspipe/ingestion/: __init__.py  transformer.py  writer.py
scripts/: run_quality.sh
tests/: test_agent_tools.py  test_benchmark.py  test_smoke.py  test_validator.py
