[project]
name = "polarspipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "e2b>=0.15.0",
    "faker>=38.2.0",
    "jupyter>=1.1.1",
    "langgraph>=0.2.37",
    "memory-profiler>=0.61.0",
    "openai>=1.47.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.66.4",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.9",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.12.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "scalene>=1.5.48",
    "snakeviz>=2.2.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
extend-ignore = [
    "E203", # whitespace before ':' - conflicts with Black
    "W503", # line break before binary operator - conflicts with Black
]
per-file-ignores = []

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
skips = ["B101"] # allow assert in tests
exclude_dirs = [".git", ".venv", "tests"]

[project.urls]
Homepage = "https://github.com/gnm3000/polarspipe"
Repository = "https://github.com/gnm3000/polarspipe"
Issues = "https://github.com/gnm3000/polarspipe/issues"
Changelog = "https://github.com/gnm3000/polarspipe/releases"

[dependency-groups]
dev = [
    "scalene>=1.5.55",
    "snakeviz>=2.2.2",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polarspipe*"]
exclude = ["analysis*", "tests*", "scripts*", "generation-data*", "build*", "dist*"]

[project.scripts]
polarspipe = "polarspipe.cli:cli"
